--- a/index.html
+++ b/index.html
@@ -1,53 +1,67 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Login • Example</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Login Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .login-box {
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      text-align: center;
+      width: 300px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .login-box img {
+      width: 80px;
+      margin-bottom: 20px;
+    }
+    .login-box input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .login-box button {
+      width: 95%;
+      padding: 10px;
+      background-color: green;  /* submit button green */
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .login-box button:hover {
+      background-color: darkgreen;
+    }
+  </style>
 </head>
 <body>
-<main class="center">
-<div class="card">
-<h1 class="brand">MyApp</h1>
-<p class="subtitle">Sign in to your account</p>
 
+  <div class="login-box">
+    <!-- Logo -->
+    <img src="https://via.placeholder.com/80" alt="Logo">
 
-<form id="loginForm" novalidate>
-<div class="field">
-<label for="email">Email</label>
-<input id="email" name="email" type="email" placeholder="you@example.com" required />
-<small class="error" id="emailError" aria-live="polite"></small>
-</div>
+    <!-- Username -->
+    <input type="text" id="username" name="username" placeholder="Enter Username" required><br>
 
+    <!-- Password -->
+    <input type="password" id="password" name="password" placeholder="Enter Password" required><br>
 
-<div class="field">
-<label for="password">Password</label>
-<div class="pw-row">
-<input id="password" name="password" type="password" minlength="6" placeholder="••••••••" required />
-<button type="button" id="togglePw" class="icon" aria-label="Show password">👁️</button>
-</div>
-<small class="error" id="pwError" aria-live="polite"></small>
-</div>
+    <!-- Submit -->
+    <button type="submit">Login</button>
+  </div>
 
-
-<div class="controls">
-<label class="remember"><input type="checkbox" id="remember"> Remember me</label>
-<a class="link" href="#">Forgot?</a>
-</div>
-
-
-<button id="submitBtn" class="primary" type="submit">Sign in</button>
-
-
-<div id="msg" role="status" aria-live="polite"></div>
-</form>
-
-
-<p class="muted">Don't have an account? <a href="#">Sign up</a></p>
-</div>
-</main>
-
-
-<script src="script.js"></script>
 </body>
 </html>
