--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Login Page</title>
+  <title>Login Page</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
     .login-box button {
       width: 95%;
       padding: 10px;
-      background-color: green;  /* submit button green */
+      background-color: green;  /* Submit button green */
       border: none;
       color: white;
       font-size: 16px;
