--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <input type="password" id="password" name="password" placeholder="Enter Password" required><br>
 
     <!-- Submit -->
-    <button type="submit">Login</button>
+    <button type="submit">Submit</button>
   </div>
 
 </body>
