--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="login-box">
     <!-- Logo -->
-    <img src="https://via.placeholder.com/80" alt="Logo">
+    <img src="logo.png" alt="Logo">
 
     <!-- Username -->
     <input type="text" id="username" name="username" placeholder="Enter Username" required><br>
