--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
   <div class="login-box">
     <!-- Logo -->
-    <img src="logo.png" alt="Logo">
+   <img src="logo.png" alt="index.html" width="100" height="100">
+
 
     <!-- Username -->
     <input type="text" id="username" name="username" placeholder="Enter Username" required><br>
