--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="login-box">
     <!-- Logo -->
-   <img src="logo.png" alt="index.html" width="100" height="100">
+   <img src="logo.png" alt="Logo" width="100" height="100">
 
 
     <!-- Username -->
@@ -61,7 +61,7 @@
     <input type="password" id="password" name="password" placeholder="Enter Password" required><br>
 
     <!-- Submit -->
-    <button type="submit">Submit</button>
+    <button type="submit">Login</button>
   </div>
 
 </body>
