--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="login-box">
     <!-- Logo -->
-   <img src="logopng.png" alt="Logo" width="100" height="100">
+   <img src="logo.png.png" alt="Logo" width="100" height="100">
 
 
     <!-- Username -->
